--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -48,12 +48,52 @@ a {
   flex-direction: column;
 }
 
+/*first column*/
+
 .section.first {
   width: 630px;
+  margin-left: 15px;
 }
+
+.image-content {
+  height: 300px;
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  text-align: center;
+}
+
+.story-text {
+   font-family: Georgia;
+   font-size: 17px;
+   color: black;
+}
+
+.lead-story .image-content {
+  background-image: url("../images/img-story-main.png");
+  font-size: 40px;
+  text-align: left;
+  margin-top: 0;
+}
+
+.earth-story {
+  background-image: url("../images/img-story-2.png");
+}
+
+.camera-story {
+  background-image: url("../images/img-story-3.png");
+}
+
+/*second column*/
 
 .section.second {
   width: 300px;
+  margin-top: 40px;
+}
+
+.cat-story {
+  background-image: url("../images/img-story-1.png");
 }
 
 .section.third {
