--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -48,6 +48,22 @@ a {
   flex-direction: column;
 }
 
+.stories {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.story {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+}
+
+.stories .story-content {
+  height: 250px;
+}
+
 /*first column*/
 
 .section.first {
@@ -96,7 +112,72 @@ a {
   background-image: url("../images/img-story-1.png");
 }
 
+/*third column*/
+
 .section.third {
   width: 240px;
   margin-right: 60px;
+}
+
+.image-cookie {
+  height: 240px;
+  margin-top: 40px;
+}
+
+.news-bites {
+  display: flex;
+  flex-direction: column;
+}
+
+.news-bites h3 {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.bite {
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+  padding: 11px 20px;
+  border-bottom: 1px solid black;
+  background-color: whitesmoke;
+}
+
+/*footer*/
+
+footer {
+  display: flex;
+  height: 320px;
+  background-color: MediumAquamarine;
+  margin-top: 70px;
+  justify-content: center;
+  align-items: center;
+  font-family: Verdana;
+  font-size: 12px;
+  flex-direction: column;
+}
+
+
+.footer-title {
+  display: inline-block;
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  padding-right: 30px;
+  color: White;
+  border-right: 2px solid white;
+
+}
+
+footer nav {
+  display: inline-block;
+  font-family: Verdana;
+  font-size: 12px;
+  margin-left: 30px;
+}
+
+.copyright {
+  margin-top: 10px;
 }
